--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./style.css">
 
     <title>Snake</title>
-    <script  type="module" src="./script.js" defer></script>
 </head>
 
 <body>
@@ -22,6 +21,7 @@
         </canvas>
     <p id="id_message"></p>
     </section>
+    <script src="./script.js"></script>
 </div>
 </body>
 </html>
